minor ui updates

--- a/app/src/main/res/layout/user_info_mini.xml
+++ b/app/src/main/res/layout/user_info_mini.xml
@@ -71,7 +71,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="+71234567890"
+        tools:text="+71234567890"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
