--- a/app/src/main/res/layout/user_info_mini.xml
+++ b/app/src/main/res/layout/user_info_mini.xml
@@ -7,7 +7,7 @@
     android:padding="16dp">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_edit_personal_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
