--- a/app/src/main/res/layout/activity_login_v2.xml
+++ b/app/src/main/res/layout/activity_login_v2.xml
@@ -62,7 +62,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="@drawable/login_continue"
+        android:background="@drawable/activateble_button"
         android:text="@string/action_continue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
