--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,15 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="Theme.Transparent" parent="AppTheme.NoActionBar">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
     <style name="AppTheme.BlueButton" parent="Widget.AppCompat.Button.Colored">
         <item name="backgroundTint">@color/colorPrimary</item>
         <item name="android:textColor">@android:color/white</item>
@@ -129,7 +138,7 @@
         <item name="android:elevation" tools:targetApi="lollipop">8dp</item>
     </style>
 
-    <style name="ActionItem_72" >
+    <style name="ActionItem_72">
         <item name="android:elevation" tools:targetApi="lollipop">8dp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -148,5 +157,8 @@
         <item name="android:background">@drawable/circle_call</item>
     </style>
 
+    <style name="HelpActivity" parent="Theme.Transparent">
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
 
 </resources>
