--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -105,6 +105,18 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="Text_tariff_title" parent="Text_user_info_block_title"></style>
+
+    <style name="Text_tariff_price" parent="Text_user_info_block_title">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="Text_tariff_minutes" parent="Text_tariff_price">
+        <item name="android:textColor">@android:color/holo_red_dark</item>
+        <item name="android:textSize">26sp</item>
+    </style>
+
     <style name="Text_user_info_block_value" parent="Text_default">
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">16sp</item>
