--- a/app/src/main/res/drawable/ic_play.xml
+++ b/app/src/main/res/drawable/ic_play.xml
@@ -1,9 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="50dp"
-        android:height="50dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M10,16.5l6,-4.5 -6,-4.5v9zM12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8z"/>
+<vector android:autoMirrored="true" android:height="60dp"
+    android:viewportHeight="60" android:viewportWidth="60"
+    android:width="60dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#ffffff" android:pathData="M30,0L30,0A30,30 0,0 1,60 30L60,30A30,30 0,0 1,30 60L30,60A30,30 0,0 1,0 30L0,30A30,30 0,0 1,30 0z"/>
+    <path android:fillColor="#D52B1E" android:pathData="M30,3.333L30,3.333A26.6667,26.6667 0,0 1,56.6667 29.9997L56.6667,29.9997A26.6667,26.6667 0,0 1,30 56.6663L30,56.6663A26.6667,26.6667 0,0 1,3.3334 29.9997L3.3334,29.9997A26.6667,26.6667 0,0 1,30 3.333z"/>
+    <path android:fillColor="#ffffff" android:pathData="M39.5,28.2683C40.8333,29.0381 40.8333,30.9626 39.5,31.7324L25.5,39.8153C24.1667,40.5851 22.5,39.6228 22.5,38.0832L22.5,21.9174C22.5,20.3778 24.1667,19.4156 25.5,20.1854L39.5,28.2683Z"/>
 </vector>
