background to purchase activity

--- a/app/src/main/res/layout/activity_purchase.xml
+++ b/app/src/main/res/layout/activity_purchase.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:background="#4CAF50">
+    android:background="@drawable/back01">
 
 
     <ImageView
@@ -50,11 +50,13 @@
         android:layout_height="0dp"
         android:layout_marginTop="240dp"
         android:elevation="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="#943F9F9F">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/b_choose_tariff"
@@ -73,11 +75,6 @@
             android:id="@+id/rv_tariffs"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/b_choose_tariff"
             app:layout_constraintEnd_toEndOf="parent"
