--- a/app/src/main/res/layout/user_info_mini.xml
+++ b/app/src/main/res/layout/user_info_mini.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_edit" />
+        app:srcCompat="@drawable/ic_edit_profile" />
 
     <TextView
         android:id="@+id/textView2"
