--- a/app/src/main/res/layout/activity_login_v2.xml
+++ b/app/src/main/res/layout/activity_login_v2.xml
@@ -37,7 +37,6 @@
         android:id="@+id/phone"
         style="@style/EditText_rounded"
         android:layout_width="0dp"
-        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
@@ -54,15 +53,13 @@
 
     <Button
         android:id="@+id/get_code_button"
-        style="@style/Button_fab"
+        style="@style/Button_fab_activatable"
         android:layout_width="0dp"
-        android:layout_height="64dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="@drawable/activateble_button"
         android:text="@string/action_continue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
