--- a/app/src/main/res/layout/activity_name_input_v2.xml
+++ b/app/src/main/res/layout/activity_name_input_v2.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back01">
@@ -25,7 +24,6 @@
         android:id="@+id/et_name"
         style="@style/EditText_rounded"
         android:layout_width="0dp"
-        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="32dp"
@@ -42,15 +40,13 @@
 
     <Button
         android:id="@+id/b_continue"
-        style="@style/Button_fab"
+        style="@style/Button_fab_activatable"
         android:layout_width="0dp"
-        android:layout_height="64dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="@drawable/activateble_button"
         android:text="@string/action_continue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
