--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -132,6 +132,7 @@
         <item name="android:paddingLeft">16sp</item>
         <item name="android:textColor">@color/colorFieldHint</item>
         <item name="android:elevation" tools:targetApi="lollipop">8dp</item>
+        <item name="android:layout_height">48dp</item>
     </style>
 
 
@@ -139,7 +140,12 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:layout_height">64dp</item>
         <item name="android:background">@drawable/rounded_background_fab</item>
+    </style>
+
+    <style name="Button_fab_activatable" parent="Button_fab">
+        <item name="android:background">@drawable/activateble_button</item>
     </style>
 
     <style name="Main_timer">
