--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,13 +82,39 @@
     </style>
 
 
-    <!--new ui-->
+    <!--new ui common-->
     <style name="Text_default">
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="EditText_rounded">
+        <item name="android:background">@drawable/rounded_background</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingStart">16sp</item>
+        <item name="android:paddingLeft">16sp</item>
+        <item name="android:textColor">@color/colorFieldHint</item>
+        <item name="android:elevation" tools:targetApi="lollipop">8dp</item>
+        <item name="android:layout_height">48dp</item>
+    </style>
+
+
+    <style name="Button_fab">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_height">64dp</item>
+        <item name="android:background">@drawable/rounded_background_fab</item>
+    </style>
+
+    <style name="Button_fab_activatable" parent="Button_fab">
+        <item name="android:background">@drawable/activateble_button</item>
+    </style>
+
+    <!--new ui-->
     <style name="Text_toolbar" parent="Text_default">
         <item name="android:textSize">18sp</item>
     </style>
@@ -121,31 +147,6 @@
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">16sp</item>
 
-    </style>
-
-    <style name="EditText_rounded">
-        <item name="android:background">@drawable/rounded_background</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:paddingStart">16sp</item>
-        <item name="android:paddingLeft">16sp</item>
-        <item name="android:textColor">@color/colorFieldHint</item>
-        <item name="android:elevation" tools:targetApi="lollipop">8dp</item>
-        <item name="android:layout_height">48dp</item>
-    </style>
-
-
-    <style name="Button_fab">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:layout_height">64dp</item>
-        <item name="android:background">@drawable/rounded_background_fab</item>
-    </style>
-
-    <style name="Button_fab_activatable" parent="Button_fab">
-        <item name="android:background">@drawable/activateble_button</item>
     </style>
 
     <style name="Main_timer">
