base ui to conpensation activity

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="default_elevation">8dp</dimen>
     <dimen name="toolbar_top_margin">48dp</dimen>
+    <dimen name="compensation_indicator_drawable_size">8dp</dimen>
 
     <!--    helps to make image in fab larger-->
 <!--    <dimen name="design_fab_image_size" tools:override="true">56dp</dimen>-->
