--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -191,4 +191,17 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="CompensationStepDescription_Text" parent="Text_default">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginStart">64dp</item>
+        <item name="android:layout_marginLeft">64dp</item>
+        <item name="android:layout_marginEnd">64dp</item>
+        <item name="android:layout_marginRight">64dp</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
 </resources>
