--- a/app/src/main/res/layout/activity_compensation.xml
+++ b/app/src/main/res/layout/activity_compensation.xml
@@ -49,12 +49,10 @@
         android:id="@+id/vp_steps"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:paddingTop="40dp"
-        android:paddingBottom="32dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="88dp"
         android:background="#00EF6464"
         app:layout_constraintBottom_toTopOf="@+id/b_continue"
         app:layout_constraintEnd_toEndOf="parent"
