--- a/app/src/main/res/layout/activity_compensation.xml
+++ b/app/src/main/res/layout/activity_compensation.xml
@@ -45,7 +45,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_toolbar_title" />
 
-    <android.support.v4.view.ViewPager
+    <com.getbewarned.connectinterpreter.custon_ui_elements.SwipableViewPager
         android:id="@+id/vp_steps"
         android:layout_width="0dp"
         android:layout_height="0dp"
