--- a/app/src/main/res/layout/compensation_fragent_date_of_birth.xml
+++ b/app/src/main/res/layout/compensation_fragent_date_of_birth.xml
@@ -7,13 +7,38 @@
     android:background="#00222222"
     tools:background="#80D66D6D">
 
-    <TextView
-        android:id="@+id/textView3"
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_calendar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date of birth"
+        android:background="#F8F8F8"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="@dimen/default_elevation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <DatePicker
+            android:id="@+id/dp_date_of_birth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:theme="@style/DatePicker" />
+    </android.support.v7.widget.CardView>
+
+
+    <TextView
+        android:id="@+id/tv_compensation_date_of_birth"
+        style="@style/CompensationStepDescription_Text"
+        android:layout_marginTop="32dp"
+        android:text="@string/compensation_step_date_of_birth"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/cv_calendar" />
 </android.support.constraint.ConstraintLayout>
