--- a/app/src/main/res/layout/compensation_fragent_full_name.xml
+++ b/app/src/main/res/layout/compensation_fragent_full_name.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_compensation_full_name"
         style="@style/CompensationStepDescription_Text"
         android:layout_marginTop="32dp"
         android:text="@string/compensation_step_fullname"
