--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -181,6 +181,9 @@
     </style>
 
     <style name="CompensationStepIndicator">
+        <item name="android:layout_marginTop">@dimen/default_elevation</item>
+        <item name="android:layout_marginBottom">@dimen/default_elevation</item>
+        <item name="android:elevation">@dimen/default_elevation</item>
         <item name="android:layout_width">24dp</item>
         <item name="android:layout_height">24dp</item>
         <item name="android:background">@drawable/compensation_step_indicator</item>
@@ -194,7 +197,7 @@
     <style name="CompensationStepDescription_Text" parent="Text_default">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginStart">64dp</item>
         <item name="android:layout_marginLeft">64dp</item>
@@ -202,6 +205,14 @@
         <item name="android:layout_marginRight">64dp</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textAlignment">center</item>
+    </style>
+
+
+    <style name="DatePicker" parent="Text_default">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColorPrimary">@color/colorFieldHint</item>
+        <item name="colorControlNormal">#9C9C9C</item>
     </style>
 
 </resources>
