--- a/app/src/main/res/layout/activity_compensation_prepare.xml
+++ b/app/src/main/res/layout/activity_compensation_prepare.xml
@@ -29,8 +29,8 @@
         android:id="@+id/b_yes"
         style="@style/Button_fab"
         android:layout_width="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="24dp"
@@ -49,6 +49,8 @@
         android:layout_height="64dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/rounded_background_fab_blue"
         android:orientation="horizontal"
         android:text="@string/no"
