--- a/app/src/main/res/drawable/request_in_progress_list_item.xml
+++ b/app/src/main/res/drawable/request_in_progress_list_item.xml
@@ -2,12 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/white" />
 
-    <stroke
-        android:color="@color/blue_new_ui"
-        android:width="@dimen/request_item_stroke" />
+    <solid android:color="@color/colorRed" />
 
     <corners android:radius="@dimen/request_item_badge_corner" />
-
 </shape>
