--- a/app/src/main/res/layout/activity_main_new_v2.xml
+++ b/app/src/main/res/layout/activity_main_new_v2.xml
@@ -58,7 +58,7 @@
     <ImageView
         android:id="@+id/iv_add_minutes"
         android:layout_width="wrap_content"
-        android:layout_height="136dp"
+        android:layout_height="wrap_content"
         android:elevation="8dp"
         android:paddingTop="8dp"
         android:paddingEnd="-24dp"
