--- a/app/src/main/res/drawable/request_new_list_item.xml
+++ b/app/src/main/res/drawable/request_new_list_item.xml
@@ -2,7 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/green_new_ui" />
+    <solid android:color="@color/white" />
+
+    <stroke
+        android:color="@color/blue_new_ui"
+        android:width="@dimen/request_item_stroke" />
 
     <corners android:radius="@dimen/request_item_badge_corner" />
 
