--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
 
 <!--    new ui-->
     <color name="white">#FFFFFF</color>
-    <color name="red_new_ui">#C91518</color>
+    <color name="red_new_ui">#D52B1E</color>
     <color name="green_new_ui">#3CE261</color>
     <color name="blue_new_ui">#004BDB</color>
 
