--- a/app/src/main/res/layout/activity_requests_v2.xml
+++ b/app/src/main/res/layout/activity_requests_v2.xml
@@ -84,17 +84,15 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_toolbar_title" />
 
 
-    <android.support.design.widget.FloatingActionButton
+    <ImageView
         android:id="@+id/create_request"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:tint="@android:color/white"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/ic_add_fab"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/ic_add" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/no_requests_view"
